--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     font-size: 16px;
     box-sizing: border-box;
     font-family: 'Red Hat Display', sans-serif;
-    /* overflow-x: hidden; */ 
+    overflow-x: hidden; 
 }
 
 ::placeholder {
